--- a/views/navigation.html
+++ b/views/navigation.html
@@ -58,11 +58,10 @@
     
       <!-- reseaux sociaux -->
       <div id="icon_nav" class="d-none d-lg-block">
-        <a href="https://mobile.facebook.com/groups/2029640460436338/" class="mr-2" title="Aimez notre page facebook"><img src="/icon_logo/facebook.svg" class="icon_reseau_sociaux" alt="facebook icon"></a>
-        <a href="" class="mr-2" title="Nous suivre sur twitter"><img src="/icon_logo/twitter.svg" class="icon_reseau_sociaux" alt="twitter icon"></a>
-        <a href="" class="mr-2" title="Suivez nos actualites instagram"><img src="/icon_logo/Instagram.svg" class="icon_reseau_sociaux" alt="instagram icon" ></a>
-        <a href="" class="mr-2" title="Abonnez-vous sur notre chaine youtube"><img src="/icon_logo/youtube.svg" class="icon_reseau_sociaux" alt="youtube icon" ></a>
-        <a href="https://wa.me/+221774893206" title="Envoyez-nous un message sur notre compte Whatsapp"><img src="/icon_logo/whatsapp.svg" class="icon_reseau_sociaux" alt="whatsapp icon" class="mr-2"></a>
+        <a href="https://m.facebook.com/djiby.sarr.5264" class="mr-2" title="Aimez notre page facebook"><img src="/icon_logo/facebook.svg" class="icon_reseau_sociaux" alt="facebook icon"></a>
+        <a href="https://wa.me/+221774893206" title="Envoyez-nous un message sur Whatsapp"><img src="/icon_logo/whatsapp.svg" class="icon_reseau_sociaux" alt="whatsapp icon" class="mr-2"></a>
+        <a href="https://m.twitter.com/Mon_Ombre96" class="mr-2" title="Nous suivre sur twitter"><img src="/icon_logo/twitter.svg" class="icon_reseau_sociaux" alt="twitter icon"></a>
+        <a href="https://m.instagram.com/anonyme201296" class="mr-2" title="Suivez nos actualites sur instagram"><img src="/icon_logo/Instagram.svg" class="icon_reseau_sociaux" alt="instagram icon" ></a>
       </div>
     </nav>
 
@@ -81,7 +80,7 @@
         </h6>
         <hr class="mx-auto w-75">
         
-        <ul class="d-flex flex-column">
+        <ul class="d-flex flex-column mb-4">
           <a href="" class="font-weight-bold links rounded px-2 py-1 mb-1">
             <i class="fas fa-home mr-1"></i>
             Accueil
@@ -114,7 +113,22 @@
             <i class="fas fa-users" aria-hidden="true"></i>
             Qui sommes-nous
           </a>
+          <a href="/nos-actualites" class="links font-weight-bold rounded px-2 py-1 mb-1">
+            <i class="fas fa-users" aria-hidden="true"></i>
+            Nos actualites
+          </a>
         </ul>
+
+        <div class="d-flex justify-content-center align-items-center flex-column mb-5">
+            <h6 class="text-white rounded bg-dark mb-3 py-2 px-3">Nous suivre</h6>
+            <div id="reseaux_img">
+                <a href="https://m.facebook.com/djiby.sarr.5264" class="mx-2" title="Aimez notre page facebook"><img src="/icon_logo/facebook.svg"  alt="facebook icon"></a>
+                <a href="https://wa.me/+221774893206" class="mx-2" title="Envoyez-nous un message sur Whatsapp"><img src="/icon_logo/whatsapp.svg" alt="whatsapp icon" class="mr-2"></a>
+                <a href="https://m.twitter.com/Mon_Ombre96" class="mx-2" title="Nous suivre sur twitter"><img src="/icon_logo/twitter.svg" alt="twitter icon"></a>
+                <a href="https://m.instagram.com/anonyme201296" class="mx-2" title="Suivez nos actualites sur instagram"><img src="/icon_logo/Instagram.svg" alt="instagram icon" ></a>
+            </div>
+        </div>
+
 
       </div>
     </section>
